--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -2,12 +2,12 @@
 <html lang="en">
         <head>
                 <title>AirBnB clone</title>
-          		<link rel="icon" href="images/icon.png">
-                <link rel="stylesheet" href="styles/common.css">
-                <link rel="stylesheet" href="styles/header.css">
-                <link rel="stylesheet" href="styles/footer.css">
-                <link rel="stylesheet" href="styles/filters.css">
-                <link rel="stylesheet" href="styles/places.css">
+          	<link rel="icon" href="images/icon.png">
+                <link rel="stylesheet" href="styles/4-common.css">
+                <link rel="stylesheet" href="styles/3-header.css">
+                <link rel="stylesheet" href="styles/3-footer.css">
+                <link rel="stylesheet" href="styles/6-filters.css">
+                <link rel="stylesheet" href="styles/7-places.css">
         </head>
         <body>
                 <header>
